[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
blas-src = { version = "0.9.0", features = ["openblas"] }
itertools = "0.12.0"
ndarray = "0.15.6"
ndarray-linalg = {version = "0.15.0", features=["openblas-static"]}
openblas-src = { version = "0.10.8", features = ["cblas", "lapacke", "static"] }
regex = "1.10.2"
rustworkx-core = "0.13.2"
rayon = "1.8.0"
